--- a/Aier360/Controllers/我/Mine.storyboard
+++ b/Aier360/Controllers/我/Mine.storyboard
@@ -158,7 +158,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ife-3r-gsi">
-                                                    <rect key="frame" x="105" y="59" width="370" height="21"/>
+                                                    <rect key="frame" x="105" y="59" width="447" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="Wvw-v7-chk"/>
                                                     </constraints>
@@ -184,7 +184,7 @@
                                                 <constraint firstItem="ife-3r-gsi" firstAttribute="leading" secondItem="Q1o-ni-z6V" secondAttribute="trailing" constant="15" id="9sU-3M-o1u"/>
                                                 <constraint firstItem="ife-3r-gsi" firstAttribute="top" secondItem="ch5-gH-J6y" secondAttribute="bottom" constant="8" id="Mgw-Za-aBU"/>
                                                 <constraint firstAttribute="trailing" secondItem="dmq-8v-nKx" secondAttribute="trailing" id="Opr-wU-uvw"/>
-                                                <constraint firstAttribute="trailing" secondItem="ife-3r-gsi" secondAttribute="trailing" constant="92" id="YIp-yz-aWz"/>
+                                                <constraint firstAttribute="trailing" secondItem="ife-3r-gsi" secondAttribute="trailing" constant="15" id="YIp-yz-aWz"/>
                                                 <constraint firstItem="ch5-gH-J6y" firstAttribute="top" secondItem="jd6-iW-ZNl" secondAttribute="top" constant="30" id="cdf-kf-j56"/>
                                                 <constraint firstItem="dmq-8v-nKx" firstAttribute="top" secondItem="jd6-iW-ZNl" secondAttribute="top" constant="39" id="jMZ-2u-Bla"/>
                                                 <constraint firstItem="Q1o-ni-z6V" firstAttribute="leading" secondItem="jd6-iW-ZNl" secondAttribute="leading" constant="15" id="xhX-Jk-92w"/>
@@ -196,7 +196,7 @@
                                             <outlet property="addressLabel" destination="ife-3r-gsi" id="X8b-sM-0w9"/>
                                             <outlet property="logoImage" destination="Q1o-ni-z6V" id="hK5-LZ-XKB"/>
                                             <outlet property="titleLabel" destination="ch5-gH-J6y" id="13Q-fm-YEa"/>
-                                            <segue destination="jK2-G7-FFq" kind="show" identifier="dynamic" id="tJo-iC-E9r"/>
+                                            <segue destination="2Fv-9j-hqQ" kind="show" id="bxy-qk-0Zg"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -857,6 +857,52 @@
             </objects>
             <point key="canvasLocation" x="2408" y="1135"/>
         </scene>
+        <!--My Profile View Controller-->
+        <scene sceneID="ECj-b3-mYR">
+            <objects>
+                <tableViewController storyboardIdentifier="ZXMyProfileViewController" id="2Fv-9j-hqQ" customClass="ZXMyProfileViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="N0d-kc-gjt">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="6Ya-Pd-bRr">
+                            <rect key="frame" x="0.0" y="0.0" width="600" height="290"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mine_profile_bg" translatesAutoresizingMaskIntoConstraints="NO" id="def-in-sOZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="290"/>
+                                </imageView>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="def-in-sOZ" firstAttribute="leading" secondItem="6Ya-Pd-bRr" secondAttribute="leading" id="4uJ-Nm-CT5"/>
+                                <constraint firstItem="def-in-sOZ" firstAttribute="top" secondItem="6Ya-Pd-bRr" secondAttribute="top" id="7Oc-0E-AeK"/>
+                                <constraint firstAttribute="trailing" secondItem="def-in-sOZ" secondAttribute="trailing" id="REB-0w-vDK"/>
+                                <constraint firstAttribute="bottom" secondItem="def-in-sOZ" secondAttribute="bottom" id="VaJ-hx-S62"/>
+                            </constraints>
+                        </view>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="mfR-y0-1Xt">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="mfR-y0-1Xt" id="Wpd-Kw-psr">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="2Fv-9j-hqQ" id="gs2-1T-ECk"/>
+                            <outlet property="delegate" destination="2Fv-9j-hqQ" id="ZUa-dH-69d"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <outlet property="profileImage" destination="def-in-sOZ" id="qRW-Cq-s90"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rDo-aM-Sqb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-121" y="-317"/>
+        </scene>
         <!--My Dynamic View Controller-->
         <scene sceneID="DEL-37-RwI">
             <objects>
@@ -866,10 +912,10 @@
                         <viewControllerLayoutGuide type="bottom" id="0h1-fx-71S"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="YjZ-YS-QrG">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Nsa-Gc-EtV">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Nsa-Gc-EtV">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
@@ -1381,7 +1427,7 @@
                                     <outlet property="delegate" destination="jK2-G7-FFq" id="C9M-Ox-Hvg"/>
                                 </connections>
                             </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FIn-Hh-66L">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FIn-Hh-66L">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Rh-yE-ubp">
@@ -2191,6 +2237,7 @@
         <image name="logo_about" width="76" height="112"/>
         <image name="mail_comment" width="16" height="16"/>
         <image name="mine_collect" width="26" height="26"/>
+        <image name="mine_profile_bg" width="350" height="232"/>
         <image name="placeholder" width="75" height="75"/>
         <image name="school_bg" width="320" height="220"/>
         <image name="school_message" width="19" height="19"/>
