--- a/Aier360/Controllers/我/Mine.storyboard
+++ b/Aier360/Controllers/我/Mine.storyboard
@@ -1765,11 +1765,11 @@
                         <viewControllerLayoutGuide type="bottom" id="EFC-yp-xCm"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="YCE-hv-qLi">
-                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="X9c-Tw-eQz">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="100" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
@@ -1819,7 +1819,7 @@
                                 </connections>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e2B-O0-pt8">
-                                <rect key="frame" x="0.0" y="600" width="600" height="206"/>
+                                <rect key="frame" x="0.0" y="536" width="600" height="206"/>
                                 <subviews>
                                     <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="npi-oA-vwz">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
@@ -2480,6 +2480,6 @@
         <image name="user_sex_female" width="9" height="10"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="h3b-nZ-Mix"/>
+        <segue reference="vOO-Zq-G1W"/>
     </inferredMetricsTieBreakers>
 </document>
