--- a/Aier360/Controllers/我/Mine.storyboard
+++ b/Aier360/Controllers/我/Mine.storyboard
@@ -930,9 +930,6 @@
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PUB-SK-RHF">
                                             <rect key="frame" x="112" y="11" width="455" height="21"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="21" id="lZ6-aH-CHg"/>
-                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" red="0.70196078429999997" green="0.69019607839999997" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -973,9 +970,6 @@
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wbC-Ph-zRJ">
                                             <rect key="frame" x="112" y="11" width="455" height="21"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="21" id="hdF-05-Nu9"/>
-                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -1849,29 +1843,27 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我是TA的" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WFV-If-KND">
                                                     <rect key="frame" x="15" y="13" width="59" height="17"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="59" id="Rsr-1O-lk4"/>
-                                                        <constraint firstAttribute="height" constant="17" id="sxa-Bm-Hpl"/>
+                                                        <constraint firstAttribute="width" constant="59" id="OhT-cW-9OQ"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" red="0.63137254901960782" green="0.61568627450980395" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zqy-JY-VBC">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zqy-JY-VBC">
                                                     <rect key="frame" x="100" y="13" width="492" height="17"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="17" id="1V7-lP-aOP"/>
-                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="centerY" secondItem="Zqy-JY-VBC" secondAttribute="centerY" id="6mp-dx-gaM"/>
-                                                <constraint firstItem="Zqy-JY-VBC" firstAttribute="leading" secondItem="WFV-If-KND" secondAttribute="trailing" constant="26" id="NO8-5H-79D"/>
-                                                <constraint firstAttribute="centerY" secondItem="WFV-If-KND" secondAttribute="centerY" id="Wsk-pQ-YDA"/>
-                                                <constraint firstItem="Zqy-JY-VBC" firstAttribute="trailing" secondItem="Fac-4X-rGP" secondAttribute="trailingMargin" id="e4O-J1-jkP"/>
-                                                <constraint firstItem="WFV-If-KND" firstAttribute="leading" secondItem="Fac-4X-rGP" secondAttribute="leadingMargin" constant="7" id="sts-0A-sVv"/>
+                                                <constraint firstItem="WFV-If-KND" firstAttribute="leading" secondItem="Fac-4X-rGP" secondAttribute="leading" constant="15" id="0j7-p4-Nwf"/>
+                                                <constraint firstAttribute="trailing" secondItem="Zqy-JY-VBC" secondAttribute="trailing" constant="8" id="74H-FK-rJt"/>
+                                                <constraint firstItem="WFV-If-KND" firstAttribute="top" secondItem="Fac-4X-rGP" secondAttribute="top" constant="13" id="JSI-Uh-bJz"/>
+                                                <constraint firstAttribute="bottom" secondItem="Zqy-JY-VBC" secondAttribute="bottom" constant="13" id="LMz-O1-2UG"/>
+                                                <constraint firstAttribute="bottom" secondItem="WFV-If-KND" secondAttribute="bottom" constant="13" id="MZ4-Xk-JYi"/>
+                                                <constraint firstItem="Zqy-JY-VBC" firstAttribute="leading" secondItem="WFV-If-KND" secondAttribute="trailing" constant="26" id="iB0-ah-ZC5"/>
+                                                <constraint firstItem="Zqy-JY-VBC" firstAttribute="top" secondItem="Fac-4X-rGP" secondAttribute="top" constant="13" id="ncY-iF-3fe"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
