--- a/Aier360/Controllers/我/Mine.storyboard
+++ b/Aier360/Controllers/我/Mine.storyboard
@@ -1116,14 +1116,92 @@
                                     <outlet property="titleLabel" destination="X9Y-9l-HIQ" id="yWg-89-MYt"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="115" id="M2l-uQ-zhj">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ZXProfileInfoCell" rowHeight="115" id="M2l-uQ-zhj" customClass="ZXProfileInfoCell">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="M2l-uQ-zhj" id="pOZ-Aa-CxQ">
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="个人资料" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UAC-xp-5FU">
+                                            <rect key="frame" x="15" y="11" width="89" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="89" id="C6w-ye-sOM"/>
+                                                <constraint firstAttribute="height" constant="21" id="nAR-mP-L8I"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.63137254899999995" green="0.61568627450000002" blue="0.58039215690000001" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zB9-kd-Uai">
+                                            <rect key="frame" x="112" y="16" width="27" height="13"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="13" id="LsN-RC-8pi"/>
+                                                <constraint firstAttribute="width" constant="27" id="gar-gW-5za"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                            <inset key="titleEdgeInsets" minX="10" minY="2" maxX="0.0" maxY="0.0"/>
+                                            <state key="normal" title="22" backgroundImage="mine_sexage_male">
+                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                        </button>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="学生" translatesAutoresizingMaskIntoConstraints="NO" id="G1k-ki-BN4">
+                                            <rect key="frame" x="147" y="16" width="13" height="13"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="13" id="oaP-8O-6s6"/>
+                                                <constraint firstAttribute="width" constant="13" id="vZb-L4-KtK"/>
+                                            </constraints>
+                                        </imageView>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mine_location_icon" translatesAutoresizingMaskIntoConstraints="NO" id="zBQ-YH-Z3o">
+                                            <rect key="frame" x="112" y="45" width="12" height="15"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="15" id="6FL-Yl-Mdg"/>
+                                                <constraint firstAttribute="width" constant="12" id="RUX-Lj-FaD"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gWx-5L-KKD">
+                                            <rect key="frame" x="134" y="42" width="451" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="T7c-pk-0CA"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YbB-bl-9Up">
+                                            <rect key="frame" x="112" y="78" width="473" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="xuh-Jk-IHg"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                     <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstItem="zB9-kd-Uai" firstAttribute="leading" secondItem="UAC-xp-5FU" secondAttribute="trailing" constant="8" id="8LU-Tp-qHk"/>
+                                        <constraint firstItem="gWx-5L-KKD" firstAttribute="top" secondItem="G1k-ki-BN4" secondAttribute="bottom" constant="13" id="A0X-0G-Z6W"/>
+                                        <constraint firstItem="G1k-ki-BN4" firstAttribute="top" secondItem="pOZ-Aa-CxQ" secondAttribute="top" constant="16" id="BvL-8O-Ebd"/>
+                                        <constraint firstItem="UAC-xp-5FU" firstAttribute="top" secondItem="pOZ-Aa-CxQ" secondAttribute="top" constant="11" id="C16-hn-Bs6"/>
+                                        <constraint firstItem="UAC-xp-5FU" firstAttribute="leading" secondItem="pOZ-Aa-CxQ" secondAttribute="leading" constant="15" id="EBg-11-qjc"/>
+                                        <constraint firstItem="zBQ-YH-Z3o" firstAttribute="top" secondItem="zB9-kd-Uai" secondAttribute="bottom" constant="16" id="H44-MR-h4g"/>
+                                        <constraint firstAttribute="trailing" secondItem="YbB-bl-9Up" secondAttribute="trailing" constant="15" id="HRP-nj-HMq"/>
+                                        <constraint firstItem="zB9-kd-Uai" firstAttribute="top" secondItem="pOZ-Aa-CxQ" secondAttribute="top" constant="16" id="KyP-Mt-aH5"/>
+                                        <constraint firstItem="zB9-kd-Uai" firstAttribute="leading" secondItem="zBQ-YH-Z3o" secondAttribute="leading" id="MAg-XG-dcV"/>
+                                        <constraint firstItem="zB9-kd-Uai" firstAttribute="leading" secondItem="YbB-bl-9Up" secondAttribute="leading" id="UQc-O0-qUH"/>
+                                        <constraint firstAttribute="bottom" secondItem="YbB-bl-9Up" secondAttribute="bottom" constant="15" id="eoe-OW-HFD"/>
+                                        <constraint firstItem="gWx-5L-KKD" firstAttribute="leading" secondItem="zBQ-YH-Z3o" secondAttribute="trailing" constant="10" id="fUO-Zc-5qF"/>
+                                        <constraint firstAttribute="trailing" secondItem="gWx-5L-KKD" secondAttribute="trailing" constant="15" id="jRb-QL-6tT"/>
+                                        <constraint firstItem="G1k-ki-BN4" firstAttribute="leading" secondItem="zB9-kd-Uai" secondAttribute="trailing" constant="8" id="rvR-bE-2hw"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <outlet property="loacationLabel" destination="gWx-5L-KKD" id="q6D-aZ-WN9"/>
+                                    <outlet property="logoImage" destination="G1k-ki-BN4" id="bdN-B1-7qm"/>
+                                    <outlet property="sexButton" destination="zB9-kd-Uai" id="4Y8-ZC-6QK"/>
+                                    <outlet property="titleLabel" destination="YbB-bl-9Up" id="4oN-hz-Yp2"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -2542,7 +2620,9 @@
         <image name="logo_about" width="76" height="112"/>
         <image name="mail_comment" width="16" height="16"/>
         <image name="mine_collect" width="26" height="26"/>
+        <image name="mine_location_icon" width="12" height="15"/>
         <image name="mine_profile_bg" width="350" height="232"/>
+        <image name="mine_sexage_male" width="27" height="13"/>
         <image name="placeholder" width="75" height="75"/>
         <image name="school_bg" width="320" height="220"/>
         <image name="school_message" width="19" height="19"/>
